--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="page">
         <header class="header">
             <img class="header__logo" src="./images/header/__logo.svg" alt="Лого карта России">
-            <nav class="header__lang">
-                <a href="#" class="header__lang-link">Ru</a>
-                <a href="#" class="header__lang-link">En</a>
-            </nav>
+            <ul class="header__lang">
+                <li href="#" class="header__lang-link header__lang-link_active">Ru</li>
+                <li href="#" class="header__lang-link">En</li>
+            </ul>
         </header>
 
         <main class="content">
